test/good/arrays/empty10.px

a = [[], [2]]
a[0] += [5]
print a
