test/bad/arrays/array3.px

a = ["abc", false, "d"]
print a[0] + a[2]
